# docs/swagger.json
@@ -47,7 +47,7 @@
         },
         "/jobs/": {
             "get": {
-                "description": "All unfilled jobs",
+                "description": "Job details",
                 "consumes": [
                     "application/json"
                 ],
@@ -57,7 +57,7 @@
                 "tags": [
                     "jobs"
                 ],
-                "summary": "All unfilled jobs",
+                "summary": "Job details",
                 "responses": {
                     "200": {
                         "description": ""
@@ -100,6 +100,30 @@
                 "responses": {
                     "200": {
                         "description": ""
+                    }
+                }
+            }
+        },
+        "/jobs/applicants": {
+            "get": {
+                "description": "Applicants for employer.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "applicants"
+                ],
+                "summary": "Applicants for employer.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
                     }
                 }
             }
